[gd_scene load_steps=2 format=3 uid="uid://cwogo8if36ix7"]

[ext_resource type="Script" path="res://scenes/ui/lobby_menu/lobby_menu.gd" id="1_b20el"]

[node name="lobby_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b20el")

[node name="Map" type="Node" parent="."]

[node name="MapSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/map/map.tscn")
spawn_path = NodePath("../Map")
spawn_limit = 1

[node name="LobbyUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="LobbyUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.533333, 0.521569, 0.427451, 0.980392)

[node name="StartGameButton" type="Button" parent="LobbyUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 194.0
offset_right = 128.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
text = "Rozpocznij grÄ™"

[node name="PlayerList" type="Label" parent="LobbyUI"]
layout_mode = 0
offset_left = 448.0
offset_top = 106.0
offset_right = 701.0
offset_bottom = 490.0

[connection signal="button_down" from="LobbyUI/StartGameButton" to="." method="_on_start_game_button_button_down"]
